--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,10 +1,14 @@
+{% load static  %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+
 {% if latest_question_list %}
 <ul>
     {% for question in latest_question_list %}
 
     {% comment %} replace this with the url'name' {% endcomment %}
     {% comment %} <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a> {% endcomment %}
-    <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a>
+    <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
     </li>
     {% endfor %}
 </ul>
