--- a/joyrun/background/templates/background/index.html
+++ b/joyrun/background/templates/background/index.html
@@ -1,4 +1,1 @@
-{% extends './base.html' %}
-
-{% block title %}首页{% endblock title %}
-{% block content %}<div>首页</div>{% endblock content %}
+{% extends './base_index.html' %}
