--- a/joyrun/background/templates/background/base_index.html
+++ b/joyrun/background/templates/background/base_index.html
@@ -4,14 +4,14 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} - 悦跑测试平台</title>
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
     {% load static %}
-    <meta name="apple-mobile-web-app-title" content="HttpRunnerManager"/>
+    <meta name="apple-mobile-web-app-title" content="JoyrunTest"/>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-fileinput/4.4.8/css/fileinput.css"/>
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
@@ -45,7 +45,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">HttpRunnerManager</h4>
+                    <h4 class="modal-title" id="myModalLabel">JoyrunTest</h4>
                 </div>
                 <div class="modal-body">
                     <input name="upload" id="uploadfile" type="file" class="file" multiple/>
@@ -92,47 +92,50 @@
 
 
         <div class="sideMenu am-icon-dashboard" style="color:#aeb2b7; margin: 10px 0 0 0;"> 欢迎您：{{ account }} &nbsp;&nbsp;<a
-                href='/api/log_out/'>注 销</a></div>
+                href="{% url 'background:function' 'logout' %}">注 销</a></div>
         <div class="sideMenu">
             <h3 class="am-icon-folder"><em></em> <a href="#">项目管理</a></h3>
             <ul>
-                <li><a href="/api/project_list/1/">项 目 列 表</a></li>
-                <li><a href="/api/add_project/">新 增 项 目</a></li>
-                <li><a href="/api/debugtalk_list/1/">debugtalk.py</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">项 目 列 表</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">新 增 项 目</a></li>
+                {% comment %} <li><a href="/api/debugtalk_list/1/">debugtalk.py</a></li> {% endcomment %}
             </ul>
+
             <h3 class="am-icon-th-list"><em></em> <a href="#"> 模块管理</a></h3>
             <ul>
-                <li><a href="/api/module_list/1/">模 块 列 表</a></li>
-                <li><a href="/api/add_module/">新 增 模 块</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">模 块 列 表</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">新 增 模 块</a></li>
             </ul>
+
             <h3 class="am-icon-bug"><em></em> <a href="#">用例管理</a></h3>
             <ul>
-                <li><a href="/api/add_case/">新 增 用 例</a></li>
-                <li><a href="/api/test_list/1/">用 例 列 表</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">用 例 列 表</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">新 增 用 例</a></li>
             </ul>
 
             <h3 class="am-icon-tags"><em></em> <a href="#">配置管理</a></h3>
             <ul>
-                <li><a href="/api/add_config/">新 增 配 置</a></li>
-                <li><a href="/api/config_list/1/">配 置 列 表</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">配 置 列 表</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">新 增 配 置</a></li>
             </ul>
 
             <h3 class="am-icon-soundcloud"><em></em> <a href="#">测试计划</a></h3>
             <ul>
-                <li><a href="/api/suite_list/1/">测 试 套 件</a></li>
-                <li><a href="/api/periodictask/1/">定 时 任 务</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">定 时 任 务</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">测 试 套 件</a></li>
             </ul>
 
 
             <h3 class="am-icon-jsfiddle"><em></em> <a href="#">报告管理</a></h3>
             <ul>
-                <li><a href="/api/report_list/1/">查看报告</a></li>
+                <li><a href="{% url 'background:function' 'index' %}">查看报告</a></li>
             </ul>
+
             <h3 class="am-icon-gears"><em></em> <a href="#">系统设置</a></h3>
             <ul>
-                <li><a href="/api/env_list/1/">运 行 环 境</a></li>
-                <li><a href="http://192.168.91.45:5555/dashboard">任 务 监 控</a></li>
-              {% comment %}  <li><a href="/api/echo/">实验室</a></li>{% endcomment %}
+                <li><a href="{% url 'background:function' 'index' %}">运 行 环 境</a></li>
+                {% comment %} <li><a href="http://192.168.91.45:5555/dashboard">任 务 监 控</a></li> {% endcomment %}
+                {% comment %} <li><a href="/api/echo/">实验室</a></li> {% endcomment %}
             </ul>
         </div>
         <!-- sideMenu End -->
