--- a/joyrun/background/templates/background/base_index.html
+++ b/joyrun/background/templates/background/base_index.html
@@ -77,7 +77,7 @@
 
 <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
     <div class="am-modal-dialog">
-        <div class="am-modal-hd">HttpRunnerManager</div>
+        <div class="am-modal-hd">JoyrunTest</div>
         <div class="am-modal-bd" id="my-alert_print">
             Sorry，服务器可能开小差啦, 请重试!
         </div>
@@ -145,50 +145,50 @@
         <ul>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/index/'">返回首页
-                    <a href="/api/index/" class="am-close am-close-spin">~</a></button>
+                        onclick="location='{% url 'background:function' 'index' %}'">返回首页
+                    <a href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a></button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/project_list/1/'">项目列表<a
-                        href="/api/project_list/1/" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'index' %}'">项目列表<a
+                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/module_list/1/'">模块列表<a
-                        href="/api/module_list/1/" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'index' %}'">模块列表<a
+                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/test_list/1/'">用例列表<a
-                        href="/api/test_list/1/" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'index' %}'">用例列表<a
+                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
 
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/add_config/'">新增配置<a
-                        href="/api/add_config/" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'index' %}'">新增配置<a
+                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/add_case/'">新增用例<a
-                        href="/api/add_case/" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'index' %}'">新增用例<a
+                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/add_suite/'">新增Suite<a
-                        href="/api/add_suite/" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'index' %}'">新增Suite<a
+                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/add_task/'">新增任务<a
-                        href="/api/add_task/" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'index' %}'">新增任务<a
+                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
 
