--- a/joyrun/background/templates/background/base_index.html
+++ b/joyrun/background/templates/background/base_index.html
@@ -103,13 +103,13 @@
 
             <h3 class="am-icon-th-list"><em></em> <a href="#"> 模块管理</a></h3>
             <ul>
-                <li><a href="{% url 'background:function' 'index' %}">模 块 列 表</a></li>
+                <li><a href="{% url 'background:function' 'index'  %}">模 块 列 表</a></li>
                 <li><a href="{% url 'background:function' 'index' %}">新 增 模 块</a></li>
             </ul>
 
             <h3 class="am-icon-bug"><em></em> <a href="#">用例管理</a></h3>
             <ul>
-                <li><a href="{% url 'background:function' 'index' %}">用 例 列 表</a></li>
+                <li><a href="{% url 'background:pagenum' 'testcase_list' '1' %}">用 例 列 表</a></li>
                 <li><a href="{% url 'background:function' 'index' %}">新 增 用 例</a></li>
             </ul>
 
