--- a/joyrun/background/templates/background/base_index.html
+++ b/joyrun/background/templates/background/base_index.html
@@ -96,20 +96,20 @@
         <div class="sideMenu">
             <h3 class="am-icon-folder"><em></em> <a href="#">项目管理</a></h3>
             <ul>
-                <li><a href="{% url 'background:function' 'index' %}">项 目 列 表</a></li>
+                <li><a href="{% url 'background:function' 'project_list' %}">项 目 列 表</a></li>
                 <li><a href="{% url 'background:function' 'index' %}">新 增 项 目</a></li>
                 {% comment %} <li><a href="/api/debugtalk_list/1/">debugtalk.py</a></li> {% endcomment %}
             </ul>
 
             <h3 class="am-icon-th-list"><em></em> <a href="#"> 模块管理</a></h3>
             <ul>
-                <li><a href="{% url 'background:function' 'index'  %}">模 块 列 表</a></li>
+                <li><a href="{% url 'background:function' 'module_list' %}">模 块 列 表</a></li>
                 <li><a href="{% url 'background:function' 'index' %}">新 增 模 块</a></li>
             </ul>
 
             <h3 class="am-icon-bug"><em></em> <a href="#">用例管理</a></h3>
             <ul>
-                <li><a href="{% url 'background:pagenum' 'testcase_list' '1' %}">用 例 列 表</a></li>
+                <li><a href="{% url 'background:function' 'testcase_list' %}">用 例 列 表</a></li>
                 <li><a href="{% url 'background:function' 'index' %}">新 增 用 例</a></li>
             </ul>
 
@@ -150,20 +150,20 @@
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='{% url 'background:function' 'index' %}'">项目列表<a
-                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'project_list' %}'">项目列表<a
+                        href="{% url 'background:function' 'project_list' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='{% url 'background:function' 'index' %}'">模块列表<a
-                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'module_list' %}'">模块列表<a
+                        href="{% url 'background:function' 'module_list' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='{% url 'background:function' 'index' %}'">用例列表<a
-                        href="{% url 'background:function' 'index' %}" class="am-close am-close-spin">~</a>
+                        onclick="location='{% url 'background:function' 'testcase_list' %}'">用例列表<a
+                        href="{% url 'background:function' 'testcase_list' %}" class="am-close am-close-spin">~</a>
                 </button>
             </li>
 
