--- a/joyrun/background/templates/background/index.html
+++ b/joyrun/background/templates/background/index.html
@@ -8,17 +8,17 @@
             <dl data-am-scrollspy="{animation: 'slide-right', delay: 100}">
                 <dt class="qs"><i class="am-icon-users"></i></dt>
                 <dd>{{ project_length }}</dd>
-                <dd class="f12"><a href="{% url 'background:pagenum' 'project_list' '1' %}" style="text-decoration: none">Project Total</a></dd>
+                <dd class="f12"><a href="{% url 'background:function' 'project_list' %}" style="text-decoration: none">Project Total</a></dd>
             </dl>
             <dl data-am-scrollspy="{animation: 'slide-right', delay: 300}">
                 <dt class="cs"><i class="am-icon-area-chart"></i></dt>
                 <dd>{{ module_length }}</dd>
-                <dd class="f12"><a href="{% url 'background:pagenum' 'module_list' '1' %}" style="text-decoration: none">Module Total</a></dd>
+                <dd class="f12"><a href="{% url 'background:function' 'module_list' %}" style="text-decoration: none">Module Total</a></dd>
             </dl>
             <dl data-am-scrollspy="{animation: 'slide-right', delay: 900}">
                 <dt class="ls"><i class="am-icon-bug"></i></dt>
                 <dd>{{ test_length }}</dd>
-                <dd class="f12"><a href="{% url 'background:pagenum' 'testcase_list' '1' %}" style="text-decoration: none">Case Total</a></dd>
+                <dd class="f12"><a href="{% url 'background:function' 'testcase_list' %}" style="text-decoration: none">Case Total</a></dd>
             </dl>
             <dl data-am-scrollspy="{animation: 'slide-right', delay: 600}">
                 <dt class="hs"><i class="am-icon-server"></i></dt>
