--- a/joyrun/background/templates/background/testcase_list.html
+++ b/joyrun/background/templates/background/testcase_list.html
@@ -6,7 +6,7 @@
 
     <div class="am-modal am-modal-prompt" tabindex="-1" id="my-copy">
         <div class="am-modal-dialog">
-            <div style="font-size: medium;" class="am-modal-hd">HttpRunnerManager</div>
+            <div style="font-size: medium;" class="am-modal-hd">JoyrunTest</div>
             <div class="am-modal-bd">
                 <form class="form-horizontal" id="copy_list">
                     <div class="form-group">
@@ -38,7 +38,7 @@
 
     <div class="am-modal am-modal-confirm" tabindex="-1" id="my-invalid">
         <div class="am-modal-dialog">
-            <div class="am-modal-hd">HttpRunnerManager</div>
+            <div class="am-modal-hd">JoyrunTest</div>
             <div class="am-modal-bd">
                 亲，请确认该用例是否被其他用例依赖后再谨慎删除哦
             </div>
@@ -58,7 +58,8 @@
                            style="font-weight: inherit; font-size: small ">运行环境:</label>
                     <div class="col-sm-8">
                         <select class="form-control" id="env_name" name="env_name">
-                            <option value="">自带环境</option>
+                            <option value="test">测试环境</option>
+                            <option value="production">生产环境</option>
                             {% for foo in env %}
                                 <option value="{{ foo.base_url }}">{{ foo.env_name }}</option>
                             {% endfor %}
@@ -79,14 +80,14 @@
             <ul class="am-icon-flag on"> 用例列表</ul>
             <dl class="am-icon-home" style="float: right;"> 当前位置： 用例管理 > <a href="#">用例展示</a></dl>
             <dl>
-                <button type="button" class="am-btn am-btn-primary am-round am-btn-xs am-icon-plus"
+                {% comment %} <button type="button" class="am-btn am-btn-primary am-round am-btn-xs am-icon-plus"
                         onclick="location='{% url 'background:function' 'index' %}'">新增用例
                 </button>
                 <button type="button" class="am-btn am-btn-warning am-round am-btn-xs am-icon-plus"
                         onclick="location='{% url 'background:function' 'index' %}'">新增配置
-                </button>
+                </button> {% endcomment %}
                 <button type="button" class="am-btn am-btn-danger am-round am-btn-xs am-icon-bug"
-                        onclick="my_submit()">运行
+                        onclick="my_submit()">批量运行
                 </button>
             </dl>
         </div>
@@ -166,7 +167,7 @@
                                 <a>{{foo.name}}</a>
                                 <nav>
                                     <ul id="pre_case{{ foo.id }}" class="am-nav am-collapse">
-                                        {% for path in foo.include %}
+                                        {% for path in foo.include|convert_eval %}
                                             {% if path|data_type != 'list' %}
                                                 {% if path.config.1|is_del == True %}
                                                     <li id="{{ path.0 }}">
@@ -230,10 +231,10 @@
             </table>
 
             <div class="am-btn-group am-btn-group-xs">
-                <button type="button" class="am-btn am-btn-default" onclick="location='/api/add_case/'"><span
+                <button type="button" class="am-btn am-btn-default" onclick="location='/add_case/'"><span
                         class="am-icon-plus"></span> 新增用例
                 </button>
-                <button type="button" class="am-btn am-btn-default" onclick="location='/api/add_config/'"><span
+                <button type="button" class="am-btn am-btn-default" onclick="location='/add_config/'"><span
                         class="am-icon-plus"></span> 新增配置
                 </button>
             </div>
@@ -250,8 +251,19 @@
 
     <script type="text/javascript">
 
+        function coolspo(id) {
+            $('#co' + id).css('display', 'none');
+            $('#cc' + id).css('display', 'block');
+            $('#pre_case' + id).collapse('open');
+        }
 
-        {% comment %} function my_submit() {
+        function coolspc(id) {
+            $('#co' + id).css('display', 'block');
+            $('#cc' + id).css('display', 'none');
+            $('#pre_case' + id).collapse('close');
+        }
+
+        function my_submit() {
             if ($("input:checked").size() == 0) {
                 myAlert("请至少选择一条用例运行！");
             } else {
@@ -262,7 +274,7 @@
                             var json2map = JSON.stringify(data);
                             var obj = JSON.parse(json2map);
                             obj['env_name'] = $('#env_name').val();
-                            post('/api/run_batch_test/', obj)
+                            post('/run_batch_test/', obj)
                         },
                         onCancel: function () {
                         }
@@ -270,7 +282,7 @@
                 );
             }
         }
-         {% endcomment %}
+
         function run_test(index) {
                 $('#select_env').modal({
                     relatedTarget: this,
@@ -284,6 +296,12 @@
                     }
                 });
             }
+        
+        $('#select_all').click(function () {
+            var isChecked = $(this).prop("checked");
+            $("input[name^='testcase']").prop("checked", isChecked);
+        });
+
 
     </script>
 
